ircv3_parse_derive/tests/ui/fail/multiple_errors_fail.stderr
error: unknown IRC attribute: invalid
 --> tests/ui/fail/multiple_errors_fail.rs:5:11
  |
5 |     #[irc(invalid)]
  |           ^^^^^^^

error: unknown IRC attribute: invalid2
 --> tests/ui/fail/multiple_errors_fail.rs:7:11
  |
7 |     #[irc(invalid2)]
  |           ^^^^^^^^

error: field must have at least one IRC extraction attribute
  --> tests/ui/fail/multiple_errors_fail.rs:10:5
   |
10 |     missing: String,
   |     ^^^^^^^^^^^^^^^
